# EnvironmentDiffusionMap

./: .gitignore  CMakeLists.txt  README.md  main.cpp
image/: diffuse_pisa.exr  diffuse_uffizi.exr
